Fix some dark mode colors

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--bg-color);
+
+  /* dark mode colors */
+  --bg-color: rgb(16, 20, 23);
+  --border-color: rgb(80, 115, 134);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -57,7 +61,8 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    --bg-color: #ffffff;
+    --border-color: black;
   }
   a:hover {
     color: #747bff;
